Fix plugin icons cut off on main screen

--- a/src/runtime/components/plugin-card.scss
+++ b/src/runtime/components/plugin-card.scss
@@ -19,7 +19,7 @@
 
 	.card-img-top {
 		aspect-ratio: 1.5;
-		object-fit: cover;
+		object-fit: contain;
 	}
 
 	$margin-x: 10px;
